@@ -1,5 +1,8 @@
 2010-04-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* generator/genParameterSetting.sh: Generate a complete benchmark suite for a topology.
+	* generator/genExample.sh: Likewise.
+
 	* generator/Module.cpp: Use numModules instead of numDiamond in Diamond topology.
 
 	* include/dlvhex/MLPSolver.hpp: Choose the fastest dataset for A (using vector only).
